--- a/Tempo2/SearchBox.xaml
+++ b/Tempo2/SearchBox.xaml
@@ -72,12 +72,15 @@
                    HorizontalAlignment="Right"
                    Visibility="{x:Bind IsAllVisible, Mode=OneWay}">Or:</TextBlock>
 
-        <Grid Grid.Row="2"  Grid.Column="1" ColumnDefinitions="Auto,Auto"
+        <Grid Grid.Row="2"  Grid.Column="1" ColumnDefinitions="Auto,Auto,Auto"
               Margin="0,10,0,0"
               Visibility="{x:Bind IsAllVisible, Mode=OneWay}">
             
             <Button Click="ShowAll" >Show everything</Button>
-            <Button Grid.Column="1" Margin="10,0,0,0" Click="ShowHelp">
+
+            <Button Click="BrowseAll" Grid.Column="1" Margin="10,0,0,0">Browse everything</Button>
+            
+            <Button Grid.Column="2" Margin="10,0,0,0" Click="ShowHelp">
                 <Button.KeyboardAccelerators>
                     <KeyboardAccelerator Key="F1"/>
                 </Button.KeyboardAccelerators>
