--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -146,7 +146,9 @@
 
                                             <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
                                                 <Button Click="OpenCustomClick">Open</Button>
-                                                <Button Click="CloseCustomClick">Close</Button>
+                                                <Button Click="CloseCustomClick"
+                                                        IsEnabled="{x:Bind local:App.Instance.IsCustomApiScope, Mode=OneWay}"
+                                                        >Close</Button>
                                             </StackPanel>
 
                                             <!-- Show loaded custom filenames -->
