--- a/Tempo2/MemberItemView.xaml
+++ b/Tempo2/MemberItemView.xaml
@@ -9,9 +9,10 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <StackPanel Orientation="Horizontal" Margin="0,0,20,0" VerticalAlignment="Center">
+    <StackPanel Orientation="Horizontal" Margin="0,0,15,0" VerticalAlignment="Center">
         <TextBlock FontStyle="Italic" FontSize="12" Foreground="{ThemeResource SystemAccentColor}" x:Name="_tb" 
-                   VerticalAlignment="Center">
+                   VerticalAlignment="Center"
+                   Margin="0,0,5,0">
             <Run Text="S" ToolTipService.ToolTip="Static" x:Name="_static" />
             <Run Text="R" ToolTipService.ToolTip="Read only" x:Name="_readOnly"/>
             <Run Text="D" ToolTipService.ToolTip="Deprecated" x:Name="_deprecated"/>
