--- a/Tempo2/TypeDetailViewTypeInfo.xaml
+++ b/Tempo2/TypeDetailViewTypeInfo.xaml
@@ -145,6 +145,8 @@
 
                         <TextBlock Margin="0,10,0,0"><Run Text="{x:Bind TypeVM.TotalMembers, Mode=OneWay}" IsTextScaleFactorEnabled="True" /> total members</TextBlock>
 
+                        <TextBlock Margin="{StaticResource VerticalMargin}"><Hyperlink Click="ShowAllModelProperties_Click"
+                                     >All model properties</Hyperlink></TextBlock>
                     </StackPanel>
                 </StackPanel>
 
